<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:elevation="5dp"
    app:cardBackgroundColor="@color/form"
    app:cardCornerRadius="2dp"
    android:layout_marginBottom="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_body"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:padding="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtNome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fmt_recibo_nome"
                android:textColor="@color/textColor"
                android:textStyle="bold"
                android:textSize="13sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:padding="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtNumParcela"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fmt_recibo_parcela"
                android:textColor="@color/textColor"
                android:textStyle="bold"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/txtValor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fmt_recibo_valor"
                android:textColor="@color/textColor"
                android:textStyle="bold"
                android:textSize="13sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:padding="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtData"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fmt_recibo_data"
                android:textColor="@color/textColor"
                android:textStyle="bold"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/txtValorTotal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fmt_recibo_valor_total"
                android:textColor="@color/textColor"
                android:textStyle="bold"
                android:textSize="13sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:padding="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtObservacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fmt_recibo_observacao"
                android:textColor="@color/textColor"
                android:textStyle="bold"
                android:textSize="13sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/rltContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/shape_signature_pad"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtSignatureTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="5dp"
                android:text="@string/assinatura"
                android:textColor="@color/textColor"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/signaturePad"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:minHeight="80dp"
                android:contentDescription="@string/signature_hint" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>