<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/title_add"
            android:textColor="@color/textColor"
            android:textSize="@dimen/activity_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/editNome"
            android:hint="@string/recibo_nome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:inputType="textCapWords"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/message" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/editValor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/recibo_valor"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toStartOf="@+id/editNumParcela"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editNome" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/editNumParcela"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/recibo_parcela"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/editValor"
            app:layout_constraintTop_toBottomOf="@+id/editNome" />

        <RelativeLayout
            android:id="@+id/lytDataContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editValor">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/btnData"
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                app:fabSize="mini"
                app:backgroundTint="@color/colorPrimary"
                android:src="@drawable/calendar_white_48"
                app:elevation="0dp"
                android:layout_marginStart="10dp"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lytDataInput"
                android:paddingStart="50dp"
                android:paddingEnd="0dp"
                android:layout_alignStart="@id/btnData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/edtData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/recibo_data" />

            </android.support.design.widget.TextInputLayout>

        </RelativeLayout>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/editObservacao"
            android:hint="@string/recibo_observacao"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:inputType="textImeMultiLine|textCapSentences"
            android:lines="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lytDataContainer" />

        <RelativeLayout
            android:id="@+id/rltContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/shape_signature_pad"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editObservacao">

            <TextView
                android:id="@+id/txtSignatureTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="15dp"
                android:text="@string/assinatura"
                android:textColor="@color/textColor"
                android:textSize="16sp" />

            <com.github.gcacace.signaturepad.views.SignaturePad
                android:id="@+id/signaturePad"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_below="@+id/txtSignatureTitle"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:minHeight="200dp"
                app:clearOnDoubleClick="false"
                app:penColor="@color/penColor"
                app:penMaxWidth="@dimen/pen_medium"
                app:velocityFilterWeight="@dimen/pen_size" />

        </RelativeLayout>

        <Button
            android:id="@+id/btnAddRecibo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/md_blue_A200"
            android:backgroundTintMode="src_over"
            android:text="@string/btn_add_recibo"
            android:textColor="@android:color/white"
            android:textSize="@dimen/activity_btn"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rltContainer" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>
